--- a/projects/ng-aquila/src/shared-styles/theming/tokens.scss
+++ b/projects/ng-aquila/src/shared-styles/theming/tokens.scss
@@ -2122,7 +2122,8 @@ $nx-theme: (
   tab-item-active-font-weight: 700,
   tab-item-margin: 4px 16px 0,
   tab-item-margin-small-screen: 4px 16px 0 16px,
-  tab-item-padding: 4px 0 12px 0,
+  tab-item-padding-bottom: 12px,
+  tab-item-padding: 4px 0 var(--tab-item-padding-bottom) 0,
   tab-expert-color: text-01,
   tab-expert-bottom-border-color: #dadada,
   tab-item-disabled-negative-color: negative-dimmed,
