--- a/projects/ng-aquila/src/tabs/tab-group.scss
+++ b/projects/ng-aquila/src/tabs/tab-group.scss
@@ -7,6 +7,7 @@
 .nx-tab-header__item {
   @include tab__item;
   flex: 0 0 auto;
+  display: flex;
 
   // don't show inner dotted border on firefox
   &::-moz-focus-inner {
